--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,6 @@
   <artifactId>hire.me</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
-  <build>
-    <finalName>hire.me</finalName>
-  </build>
   
   <properties>
     <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -15,8 +12,6 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  
-  
   
 	<dependencies>
 	    <dependency>
@@ -133,9 +128,45 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-test</artifactId>
 		    <version>4.3.6.RELEASE</version>
-		</dependency>	    
+		</dependency>	
+		
+		<!-- postgresql -->
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>9.4-1201-jdbc41</version>
+		</dependency>
 	    
 	    
-	</dependencies>    
+	</dependencies>
+
+	<build>
+	 	<finalName>hire.me</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>com.github.jsimone</groupId>
+									<artifactId>webapp-runner</artifactId>
+									<version>7.0.57.2</version>
+									<destFileName>webapp-runner.jar</destFileName>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>	    
   
 </project>
